--- a/index.html
+++ b/index.html
@@ -207,19 +207,19 @@
                     /* transform: translateX(0); */
                 }
                 .sec1 .imgBox .sec1img1{
-                    background-image: url(/img/erom_img/visual01.png);
+                    background-image: url(img/erom_img/visual01.png);
                 }
                     .sec1img1 .textBox .texts .img1T{
                         width: 50px !important;
                     }
                 .sec1 .imgBox .sec1img2{
-                    background-image: url(/img/erom_img/visual02.png);
+                    background-image: url(img/erom_img/visual02.png);
                 }
                     .sec1img2 .textBox .texts .img2T{
                         width: 110px !important;
                     }
                 .sec1 .imgBox .sec1img3{
-                    background-image: url(/img/erom_img/visual03.png);
+                    background-image: url(img/erom_img/visual03.png);
                 }
                     .sec1img3 .textBox .texts .img3T{
                         width: 100px !important;
@@ -234,7 +234,7 @@
                                 color: white;
                             }
                 .sec1 .imgBox .sec1img4{
-                    background-image: url(/img/erom_img/visual04.png);
+                    background-image: url(img/erom_img/visual04.png);
                 }
                     .sec1img4 .textBox .num{
                             color: white;
@@ -246,7 +246,7 @@
                                 color: white;
                             }
                 .sec1 .imgBox .sec1img5{
-                    background-image: url(/img/erom_img/visual05.png);
+                    background-image: url(img/erom_img/visual05.png);
                 }
                     .sec1img5 .textBox .texts .img5T{
                         width: 80px !important;
@@ -342,7 +342,7 @@
                     .top .prev{
                         width: 40px;
                         height: 100%;
-                        background-image: url(/img/erom_img/visual_prev.png);
+                        background-image: url(img/erom_img/visual_prev.png);
                         background-position: center;
                         background-repeat: no-repeat;
                         margin-left: 20px;
@@ -372,7 +372,7 @@
                     .top .nextBtn{
                         width: 40px;
                         height: 100%;
-                        background-image: url(/img/erom_img/visual_next.png); 
+                        background-image: url(img/erom_img/visual_next.png); 
                         background-position: center;
                         background-repeat: no-repeat;
                         position: absolute;
@@ -875,20 +875,20 @@
                         background-repeat: no-repeat;
                         background-size: cover;
                     }
-                    .bottonBox5 .img5 .img5a{background-image: url(/img/erom_img/section04_img01.png);}
-                    .bottonBox5 .img5 .img5b{background-image: url(/img/erom_img/section04_img02.png);}
-                    .bottonBox5 .img5 .img5c{background-image: url(/img/erom_img/section04_img03.png);}
-                    .bottonBox5 .img5 .img5d{background-image: url(/img/erom_img/section04_img04.png);}
+                    .bottonBox5 .img5 .img5a{background-image: url(img/erom_img/section04_img01.png);}
+                    .bottonBox5 .img5 .img5b{background-image: url(img/erom_img/section04_img02.png);}
+                    .bottonBox5 .img5 .img5c{background-image: url(img/erom_img/section04_img03.png);}
+                    .bottonBox5 .img5 .img5d{background-image: url(img/erom_img/section04_img04.png);}
                     
                     .bottonBox5 .img5 .imgs.active{
                         background-position: center;
                         background-repeat: no-repeat;
                         background-size: cover;
                     }
-                    .img5 .img5a.active{background-image: url(/img/erom_img/section04_img01_over.png);}
-                    .img5 .img5b.active{background-image: url(/img/erom_img/section04_img02_over.png);}
-                    .img5 .img5c.active{background-image: url(/img/erom_img/section04_img03_over.png);}
-                    .img5 .img5d.active{background-image: url(/img/erom_img/section04_img04_over.png);}
+                    .img5 .img5a.active{background-image: url(img/erom_img/section04_img01_over.png);}
+                    .img5 .img5b.active{background-image: url(img/erom_img/section04_img02_over.png);}
+                    .img5 .img5c.active{background-image: url(img/erom_img/section04_img03_over.png);}
+                    .img5 .img5d.active{background-image: url(img/erom_img/section04_img04_over.png);}
 
                         .bottonBox5 .img5 .imgs{
                             width: 100%;
