--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     /* transform: translateX(0); */
                 }
                 .sec1 .imgBox .sec1img1{
-                    background-image: url(img/visual01.png);
+                    background-image: url(img/img01.png);
                 }
                     .sec1img1 .textBox .texts .img1T{
                         width: 50px !important;
